--- a/src/css/style.css
+++ b/src/css/style.css
@@ -3,57 +3,57 @@
 *{
     margin: 0;
     padding: 0;
+    font-family: 'Poppins', Helvetica, Arial, sans-serif;
+    font-size: 2.2vh;
 }
 body{
-    font-family: 'Poppins', Helvetica, Arial, sans-serif;
     background-color: #EFF3F5;
+    overflow-x: hidden;
+    text-align: center;
+    color: #0259a1;
 }
 header{
     background-color: white;
     display: flex;
-    text-align: center;
+    position: relative;
+    z-index: 1;
+    box-shadow: rgba(0, 0, 0, 0.05) 0px 1px 2px 0px;
 }
-#hr{
+.navbar .hr-1{
     width: 100vw;
     height: 5px;
     background-color: #1659BF;
 }
-img{
-    padding: 15px;
+.navbar #logo{
+    padding: 0.6rem;
 }
 #banner{
-    position: absolute;
+    position: fixed;
     width: 100%;
     height: 30%;
     background-color: #D9E2EB;
-
 }
 .wrapper{
-    margin: 75px 37% 0px 37%;
+    margin: 75px 37% 0 37%;
 }
 .content{
     margin-top: 15vh;
     position: relative;
     display: flex;
     flex-direction: column;
-    text-align: center;
 }
-.list-menu{
+.content .list-menu{
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
     min-width: auto;
     height: auto;
     background-color: white;
-    border-radius: 8px;
-    padding: 10px;
-    margin-bottom: 50px;
-    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+    border-radius: 10px;
+    padding: .8rem;
+    box-shadow: rgba(33, 35, 38, 0.1) 0px 10px 10px -10px;
 }
 h2{
-    font-size: 2.4vh;
-    color: #0F4098;
-    text-align: center;
     margin: 30px;
     letter-spacing: .1rem;
     font-weight: 600;
@@ -64,61 +64,96 @@ h2{
 }
 .btn{
     font-weight: 600;
-    text-align: center;
-    font-size: 26px;
+    font-weight: 600;
     color: white;
     border: none;
-    padding: 15px;
-    margin: 0px 5% 2px 5%;
-    transition: 0.4s;
+    padding: 1.2vh;
+    margin: 0px 5% 1.4% 5%;
+    transition: 0.5s;
     border-radius: 4px;
-}
-.btn-1{
-    background-color: #69966F;
-}
-.btn-2{
-    background-color: #2251CB;
     opacity: 0.8;
-}
-.btn-3{
-    background-color: #F17335;
-    opacity: 0.8;
-}
-.btn-4{
-    background-color: #DC3636;
-    opacity: 0.8;
-}
-.btn-5{
-    background-color: #4ef7b6;
+    box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 6px -1px, rgba(0, 0, 0, 0.06) 0px 2px 4px -1px;
 }
 .btn:hover{
     cursor: pointer;
-    transform: scale(1.06)
+    filter: brightness(0.9);
+}
+.btn:focus{
+    border: none;
+}
+.btn-1{
+    background-color: aliceblue;
+    color: #0F4098;
+}
+.btn-2{
+    background-color: #E83B2D;
+}
+.btn-3{
+    background-color: #2F6FDD;
 }
 a{
     text-decoration: none;
-    color: #0F4098;
+    color: inherit;
+}
+#voltar{
+    font-size: 1.5vh;
     padding: 30px;
     font-weight: 400;
+    margin-top: -1%;
 }
-a:hover{
+#voltar:hover{
     text-decoration: underline;
+}
+footer{
+    position: fixed;
+    bottom: 0;
+}
+footer .hr-2{
+    width: 100vw;
+    height: 1px;
+    background-color: lightgray;
+}
+.rodapé{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    padding: 22px;
+}
+p{
+    text-align: center;
+    font-size: 1.5vh;
+    color: black;
+    opacity: 0.8;
+    font-weight: 300;
 }
 @media (max-width: 1200px)
 {
     .wrapper{
-        margin: 15px 25% 0px 25%;
+        margin: 15px 30% 0px 30%;
     }
 }
-@media (max-width: 992px)
+@media (max-width: 1023px)
 {
     .wrapper{
         margin: 15px 20% 0px 20%;
     }
 }
-@media (max-width: 768px)
+@media (max-width: 767px)
+{
+    .wrapper{
+        margin: 15px 10% 0px 10%;
+    }
+    img{
+        width: 48px;
+    }
+}
+@media (max-width: 480)
 {
     .wrapper{
         margin: 15px 5% 0px 5%;
+    }
+    img{
+        width: 48px;
     }
 }
