--- a/src/css/style.css
+++ b/src/css/style.css
@@ -81,31 +81,31 @@ h2{
 }
 
 .btn-pex{
-    background-color: #ef4444;
+    background-color: #DF6E32;
 }
 
-.btn-ceap{
-    background-color: #f97316;
+.btn-seap{
+    background-color: #808080;
 }
 
-.btn-cecamp{
-    background-color: #f59e0b;
+.btn-cecampe{
+    background-color: #E8BC42;
 }
 
 .btn-uab{
-    background-color: #22c55e;
+    background-color: #49A79C;
 }
 
 .btn-progep{
-    background-color: #14b8a6;
+    background-color: #2486c5;
 }
 
 .btn-classes{
-    background-color: #3b82f6;
+    background-color: #3D6FB8;
 }
 
 .btn-cofen{
-    background-color: #64748b;
+    background-color: #0C97B0;
 }
 
 a{
